--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -6,19 +6,18 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 "/>
-    <meta name="description" content="<%= @event.try(:description) || @seo_description %>" />
+    <meta name="description" content="<%= truncate(@event.try(:description), :length => 300) || @seo_description %>" />
 
     <meta property="fb:app_id" content="<%= App.configure.facebook_app_id %>" />
     <meta property="og:title" content="<%= @event.try(:title) || @seo_title %>"/>
     <meta property="og:url" content="<%= request.original_url %>">
+    <meta property="og:site_name" content="daydash.co"/>
     <meta property="og:type" content="event"/>
-    <meta property="og:description" content="<%= @event.try(:description) || @seo_description %>"/>
+    <meta property="og:description" content="<%= truncate(@event.try(:description), :length => 300) || @seo_description %>"/>
     <meta property="og:image" content="<%= @event.try(:event_pictures).try(:first).try(:media, :thumb) || @seo_image %>" />
     <meta property="og:image:url" content="<%= @event.try(:event_pictures).try(:first).try(:media, :thumb) || @seo_image %>">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-
-    <meta property="og:site_name" content="daydash.co"/>
     <meta property="og:latitude" content="<%= @event.try(:latitude) %>"/>
     <meta property="og:longitude" content="<%= @event.try(:longitude) %>"/>
     <meta property="og:email" content="<%= @event.try(:user).try(:email) %>"/>
