Event Payment - new layout

--- a/app/assets/stylesheets/components/button.sass
+++ b/app/assets/stylesheets/components/button.sass
@@ -36,25 +36,37 @@ $green-color: #19D4D6
     color: white
 
 .btn-daydash-green-1
-  background: linear-gradient(90deg, #00CFD1, #00E9CA)
-  color: white
-  border: 0px
-  &:hover, &:active, &:visited, &:link
+  &, &:hover, &:active, &:visited, &:link
     background: linear-gradient(90deg, #00CFD1, #00E9CA)
     color: white
+    border: 0px
 
 .btn-daydash-green-2
-  background: $green-color
-  color: white
-  border: 0px
-  &:hover, &:active, &:visited, &:link
+  &, &:hover, &:active, &:visited, &:link
     background: $green-color
     color: white
+    border: 0px
+
+.btn-daydash-green-3
+  &, &:hover, &:active, &:visited, &:link
+    background: linear-gradient(0deg, #1A9D1F, #21C128)
+    color: white
+    border: 0px
 
 .btn-daydash-pink
-  background: linear-gradient(90deg, #DF1E68, #DD2993)
-  color: white
-  border: 0px
-  &:hover, &:active, &:visited, &:link
+  &, &:hover, &:active, &:visited, &:link
     background: linear-gradient(90deg, #DF1E68, #DD2993)
     color: white
+    border: 0px
+
+.btn-facebook
+  &, &:hover, &:active, &:visited, &:link
+    background: #3B5998
+    color: white
+    padding: 10px 30px
+    font-size: 16px
+
+    .icon
+      float: left
+      margin-top: 2px
+      margin-right: 15px
