--- a/app/assets/stylesheets/components/icon.sass
+++ b/app/assets/stylesheets/components/icon.sass
@@ -20,6 +20,8 @@
   background-image: asset-url('icons/icon-facebook.png')
 .icon-facebook-color
   background-image: asset-url('icons/icon-facebook-color.png')
+.icon-facebook-white
+  background-image: asset-url('icons/icon-facebook-white.png')
 .icon-line
   background-image: asset-url('icons/icon-line.png')
 .icon-line-black
@@ -66,3 +68,5 @@
   background-image: asset-url('icons/icon-ticket.png')
 .icon-shopping
   background-image: asset-url('icons/icon-shopping.png')
+.icon-lock
+  background-image: asset-url('icons/icon-lock.png')
