--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -6,16 +6,18 @@
       <!-- Left side -->
       <div class="col-xs-12 col-md-4">
         <div class="event card payment-card">
-          <%= link_to client_event_path(@event.to_url), target: '_self' do %>
-            <% if @event.event_pictures.present? %>
-              <div class="cover" style="background-image: url(<%= @event.event_pictures.first.try(:media, :full) %>);"></div>
-            <% else %>
-              <div class="cover"></div>
-            <% end %>
-          <% end %>
-          <div class="info">
-            <div class="row">
-              <div class="col-xs-12">
+          <div class="card-header row">
+            <div class="col col-xs-4 col-md-12">
+              <%= link_to client_event_path(@event.to_url), target: '_self' do %>
+                <% if @event.event_pictures.present? %>
+                  <div class="cover" style="background-image: url(<%= @event.event_pictures.first.try(:media, :full) %>);"></div>
+                <% else %>
+                  <div class="cover"></div>
+                <% end %>
+              <% end %>
+            </div>
+            <div class="col col-xs-8 col-md-12">
+              <div class="info row">
                 <h4 class="title text-left">
                   <%= link_to @event.title, client_event_path(@event.to_url), target: '_self' %>
                 </h4>
@@ -23,23 +25,27 @@
                 <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= @event.location_name %></div>
               </div>
             </div>
-            <div class="ticket-list">
-              <div class="list-body">
-                <% @event.sections.each do |section| %>
-                  <% next if @tickets["#{section.id}"].nil? %>
-                  <div class="ticket row">
-                    <div class="col-xs-8 ticket-title">
-                      <%= section.title %> <%= @tickets["#{section.id}"]["quantity"] %> x <%= convert_to_currency section.price %>
+          </div>
+          <div class="row">
+            <div class="col-xs-12">
+              <div class="ticket-list">
+                <div class="list-body">
+                  <% @event.sections.each do |section| %>
+                    <% next if @tickets["#{section.id}"].nil? %>
+                    <div class="ticket row">
+                      <div class="col-xs-8 ticket-title">
+                        <%= section.title %> <%= @tickets["#{section.id}"]["quantity"] %> x <%= convert_to_currency section.price %>
+                      </div>
+                      <div class="col-xs-4 ticket-price">
+                      <%= convert_to_currency(section.price * @tickets["#{section.id}"]["quantity"]) %>
+                      </div>
                     </div>
-                    <div class="col-xs-4 ticket-price">
-                    <%= convert_to_currency(section.price * @tickets["#{section.id}"]["quantity"]) %>
-                    </div>
+                  <% end unless @is_free %>
+                </div>
+                <div class="row list-footer">
+                  <div class="col-xs-12">
+                    Total: <%= @is_free ? "Free" : convert_to_currency(@tickets["total"].to_i / 100) %>
                   </div>
-                <% end unless @is_free %>
-              </div>
-              <div class="row list-footer">
-                <div class="col-xs-12">
-                  Total: <%= @is_free ? "Free" : convert_to_currency(@tickets["total"].to_i / 100) %>
                 </div>
               </div>
             </div>
@@ -173,7 +179,7 @@
                   <div class="tab-content">
                     <div role="tabpanel" class="tab-pane active" id="payment-method-credit-card-panel">
                       <div class="form-section-body row">
-                        <div class="col-xs-12">
+                        <div>
                           <div class="card-wrapper"></div>
                         </div>
                         <div class="form-group col-xs-12">
