--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -959,8 +959,19 @@ label
           li
             display: table-cell
             width: 1%
-      .form-group .radio
-        margin-right: 15px
+      .form-group
+        .radio
+          margin-right: 15px
+
+      @media (max-width: 991px)
+        .form-group
+          .form-inline
+            padding-left: 20px
+          .radio
+            display: inline-block
+            padding-top: 0px
+            margin-right: 30px
+            margin-bottom: 0px
 
   #payment-method-section
 
