Event Page - responsive, gallery popup

--- a/app/assets/stylesheets/pages/events.sass
+++ b/app/assets/stylesheets/pages/events.sass
@@ -841,8 +841,11 @@ label
           font-size: 24px
 
   #info-section
-    padding-top: 45px
+    padding-top: 15px
     padding-bottom: 60px
+    .meta-list
+      padding-top: 20px
+      padding-bottom: 10px
     .meta
       float: left
       margin-right: 15px
@@ -902,6 +905,20 @@ label
       .description
         font-size: 14px
 
+      .btn-buy
+        position: fixed
+        bottom: 0px
+        left: 0px
+        right: 0px
+        height: auto
+        z-index: 9999
+        margin-bottom: 0px
+        font-size: 20px    
+
+      .map-panel
+        #google-map
+          height: 200px
+
   #ticket-list-modal
     margin-top: 100px
     .table
@@ -918,6 +935,8 @@ label
 
       select.form-control
         min-width: 60px
+
+
 
 #payment-page
   #payment-section
