--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -23,7 +23,7 @@
     <div class="row">
       <div class="col-xs-12 col-md-7">
         <div class="row">
-          <div class="col-xs-12">
+          <div class="meta-list col-xs-12">
             <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @event.to_uptime %></div>
             <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= @event.location_name %></div>
           </div>
@@ -34,14 +34,14 @@
         <div class="gallery row">
           <% @event.event_pictures.each do |image| %>
           <div class="col col-xs-6 col-md-4">
-            <a class="image" style="background-image: url(<%= image.try(:media, :thumb) %>);"></a>
+            <a class="image" style="background-image: url(<%= image.try(:media, :thumb) %>);" data-toggle="lightbox" href="<%= image.try(:media, :thumb) %>" data-parent=".gallery" data-gallery="multiimages"></a>
           </div>
           <% end %>
         </div>
       </div>
       <div class="col-md-1"></div>
       <div class="col-xs-12 col-md-4">
-        <button type="button" class="btn btn-block btn-daydash btn-daydash-lg btn-daydash-green-1" data-toggle="modal" data-target="#ticket-list-modal">
+        <button type="button" class="btn btn-block btn-daydash btn-daydash-lg btn-daydash-green-1 btn-buy" data-toggle="modal" data-target="#ticket-list-modal">
           ซื้อตั๋ว - <%= "เริ่มที่" if @section_count > 1 %> <%= convert_to_currency(@section.price) %>
         </button>
         <div class="map-panel">
@@ -151,7 +151,16 @@
   </div>
 </div>
 
+<!-- Ekko Lightbox -->
+<link rel="stylesheet" href="/src/packages/ekko-lightbox/ekko-lightbox.min.css" />
+<script src="/src/packages/ekko-lightbox/ekko-lightbox.min.js"></script>
+
 <script type="text/javascript">
+  $(document).delegate('*[data-toggle="lightbox"]', 'click', function(event) {
+      event.preventDefault();
+      $(this).ekkoLightbox();
+  });
+
   function nextToCheckout(){
     $("#selection-error").hide();
 
