### fix when create/edit organizer
- What I did
I've …

- How I did it
I've changed …

- Description for the changelog
…….

--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -18,6 +18,11 @@
                   <input class="form-control" name="title" value="<%= @event.title %>" />
                 </div>
                 <div class="form-group">
+                  <label>Event Slug</label>
+                  <input class="form-control" name="slug" value="<%= @event.slug %>" />
+                </div>
+
+                <div class="form-group">
                   <label>Ticket type</label>
                   <div class="radio">
                     <label><input type="radio" name="ticket_type" value="general" <%= "checked" if @event.ticket_type.general? %>>General</label>
