--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -15,6 +15,16 @@
           <%= devise_error_messages! %>
 
           <div class="form-group">
+            <%= f.label :first_name %>
+            <%= f.text_field :first_name, autofocus: true, class: 'form-control underlined', placeholder: 'First Name', required: true %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :last_name %>
+            <%= f.text_field :last_name, autofocus: true, class: 'form-control underlined', placeholder: 'Last Name', required: true %>
+          </div>
+
+          <div class="form-group">
             <%= f.label :email %>
             <%= f.email_field :email, autofocus: true, class: 'form-control underlined', placeholder: 'Your email address', required: true %>
           </div>
