--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -71,7 +71,7 @@
                   <div class="form-section-header">
                     <h3 class="form-section-title">Quick Checkout</h3>
                     <div class="form-section-description">
-                      ซื้อตั๋วโดยใช้ Facebook ในคลิกเดียว
+                      ซื้อบัตรโดยใช้ Facebook ในคลิกเดียว
                     </div>
                   </div>
                   <div class="form-section-body">
