--- a/app/views/greetings/about.html.erb
+++ b/app/views/greetings/about.html.erb
@@ -22,7 +22,7 @@
   <h1 style="font-size: 48px; font-weight: 500">About</h1>
   <h2>Daydash คืออะไร</h2>
   <p>
-    Daydash (อ่านว่า เดย์แดช) คือเว็บไซต์และแอปพลิเคชั่นที่คัดเลือกกิจกรรมและอีเว้นท์ดีๆ สนุกๆ ที่ตรงกับไลฟ์สไตล์ของคนเมือง โดยสามารถซื้อตั๋วและชำระเงินเพื่อเข้าอีเว้นท์หรือกิจกรรมได้โดยตรงผ่านทางแอพพลิเคชั่นและเว็บไซต์ได้ง่ายๆ ไม่ต้องวางแผนล่วงหน้านานๆ
+    Daydash (อ่านว่า เดย์แดช) คือเว็บไซต์และแอปพลิเคชั่นที่คัดเลือกกิจกรรมและอีเว้นท์ดีๆ สนุกๆ ที่ตรงกับไลฟ์สไตล์ของคนเมือง โดยสามารถซื้อบัตรและชำระเงินเพื่อเข้าอีเว้นท์หรือกิจกรรมได้โดยตรงผ่านทางแอพพลิเคชั่นและเว็บไซต์ได้ง่ายๆ ไม่ต้องวางแผนล่วงหน้านานๆ
   </p>
   <h2>
     ทำไมเราถึงสร้าง Daydash ขึ้นมา
