--- a/app/views/greetings/terms.html.erb
+++ b/app/views/greetings/terms.html.erb
@@ -12,7 +12,7 @@
       <h2>ศัพท์สำคัญ</h2>
       <p>สินค้า คือ อีเว้นท์ หรือ กิจกรรม  หรือ แพ็คเกจการให้บริการทุกชนิดที่อยู่บน Daydash</p>
       <p>ผู้จัด คือผู้จัดกิจกรรม หรือ อีเว้นท์  ซึ่งอาจจะเป็นบุคคล กลุ่มคน ร้านค้า หรือ บริษัท ที่ให้บริการบน Daydash และตกลงยอมรับตามข้อกำหนดของ Daydash</p>
-      <p>ผู้ซื้อ คือผู้ที่ซื้อตั๋วเข้าร่วมบน Daydash และตกลงยอมรับตามข้อกำหนดของ Daydash</p>
+      <p>ผู้ซื้อ คือผู้ที่ซื้อบัตรเข้าร่วมบน Daydash และตกลงยอมรับตามข้อกำหนดของ Daydash</p>
       <p>ผู้ใช้ คือผู้ที่เข้ามาสู่แอพพลิเคชั่นของ Daydash  และใช้บริการของ Daydash  ซึ่งรวมถึงผู้จัด และผู้ซื้อด้วย</p>
 
       <h2>การลงทะเบียนและบัญชีผู้ใช้งาน</h2>
@@ -56,16 +56,16 @@
         <li>ห้ามเผยแพร่ไวรัส สปายแวร์ โทรจัน โปรแกรมซ่อน หรือไฟล์อื่นใดที่เป็นอันตราย ก่อให้เกิดความเสียหายต่อแอพพลิเคชั่น หรือผู้ใช้งานแอพพลิเคชั่น</li>
       </ul>
 
-      <h2>ข้อกำหนดเกี่ยวกับการซื้อตั๋วเข้าร่วม</h2>
-      <p>ท่านรับทราบและยอมรับว่า แอพพลิเคชั่น Daydash มีวัตถุประสงค์ที่จะให้ท่านสามารถเข้าถึงอีเว้นท์และกิจกรรมต่างๆ ได้อย่างสะดวก รวดเร็วและมีประสิทธิภาพ รวมถึงสนับสนุนกิจกรรมพาณิชย์อิเล็กทรอนิกส์ของท่านเท่านั้น บริษัทมิได้เป็นผู้จัด ผู้ขาย หรือผู้ดำเนินการใดๆ ที่เกี่ยวกับการให้บริการอีเว้นท์/กิจกรรมดังกล่าวแต่ประการใด ดังนั้น เมื่อท่านสั่งซื้อตั๋วผ่านแอพพลิเคชั่นนี้ ถือว่าท่านได้ให้ความตกลงเกี่ยวกับการซื้อสินค้าดังต่อไปนี้แล้ว
+      <h2>ข้อกำหนดเกี่ยวกับการซื้อบัตรเข้าร่วม</h2>
+      <p>ท่านรับทราบและยอมรับว่า แอพพลิเคชั่น Daydash มีวัตถุประสงค์ที่จะให้ท่านสามารถเข้าถึงอีเว้นท์และกิจกรรมต่างๆ ได้อย่างสะดวก รวดเร็วและมีประสิทธิภาพ รวมถึงสนับสนุนกิจกรรมพาณิชย์อิเล็กทรอนิกส์ของท่านเท่านั้น บริษัทมิได้เป็นผู้จัด ผู้ขาย หรือผู้ดำเนินการใดๆ ที่เกี่ยวกับการให้บริการอีเว้นท์/กิจกรรมดังกล่าวแต่ประการใด ดังนั้น เมื่อท่านสั่งซื้อบัตรผ่านแอพพลิเคชั่นนี้ ถือว่าท่านได้ให้ความตกลงเกี่ยวกับการซื้อสินค้าดังต่อไปนี้แล้ว
       </p>
       <ul>
-        <li>การซื้อตั๋ว
+        <li>การซื้อบัตร
           <ul>
-            <li>บริษัทและแอพพลิเคชั่นนี้ เป็นเพียงตัวกลางในการจำหน่ายตั๋วเข้าร่วมกิจกรรม และรับชำระค่าตั๋วแทนผู้จัดเท่านั้น ดังนั้น การสั่งซื้อตั๋วของท่านผ่านแอพพลิเคชั่น จึงถือเป็นการซื้อสินค้าจากผู้จัด</li>
-            <li>การสั่งซื้อตั๋วที่ได้รับการยืนยันผ่านแอพพลิเคชั่นว่าเป็นธุรกรรมที่ดำเนินการครบถ้วนสมบูรณ์แล้ว ซึ่งหมายรวมถึงการที่ท่านได้ชำระค่าตั๋ว รวมตลอดถึงค่าบริการที่เกี่ยวข้องแก่ทางบริษัทเรียบร้อยแล้ว บริษัทขอสงวนสิทธิในการคืนเงิน หรือยกเลิกธุรกรรมดังกล่าว แม้เป็นการทำธุรกรรมจากความผิดพลาดของผู้ใช้งานแอพพลิเคชั่นก็ตาม</li>
-            <li>บริษัทไม่มีส่วนร่วมเกี่ยวกับการกำหนดราคาค่าตั๋วในทุกกรณี ผู้จัดจะเป็นผู้กำหนดราคาตั๋ว ส่วนลด หรือ โปรโมชั่นต่าง ๆ (หากมี)</li>
-            <li>บริษัทไม่มีส่วนร่วมในการกำหนดจำนวนอีเว้นท์หรือกิจกรรมที่จะจำหน่ายผ่านแอพพลิเคชั่นในทุกกรณี นอกจากนั้น ในบางกรณี ผู้จัดอาจจัดให้มีการจำหน่ายตั๋วเข้าร่วมผ่านหลายช่องทางซึ่งรวมถึงแอพพลิเคชั่นนี้ ดังนั้น บริษัทจึงไม่สามารถยืนยันจำนวนสินค้าที่แน่นอนที่สามารถจำหน่ายผ่านแอพพลิเคชั่นได้ การระบุจำนวนตั๋วผ่านทางแอพพลิเคชั่น เป็นการระบุจำนวนตามที่ผู้จัดกำหนดมาเท่านั้น</li>
+            <li>บริษัทและแอพพลิเคชั่นนี้ เป็นเพียงตัวกลางในการจำหน่ายบัตรเข้าร่วมกิจกรรม และรับชำระค่าบัตรแทนผู้จัดเท่านั้น ดังนั้น การสั่งซื้อบัตรของท่านผ่านแอพพลิเคชั่น จึงถือเป็นการซื้อสินค้าจากผู้จัด</li>
+            <li>การสั่งซื้อบัตรที่ได้รับการยืนยันผ่านแอพพลิเคชั่นว่าเป็นธุรกรรมที่ดำเนินการครบถ้วนสมบูรณ์แล้ว ซึ่งหมายรวมถึงการที่ท่านได้ชำระค่าบัตร รวมตลอดถึงค่าบริการที่เกี่ยวข้องแก่ทางบริษัทเรียบร้อยแล้ว บริษัทขอสงวนสิทธิในการคืนเงิน หรือยกเลิกธุรกรรมดังกล่าว แม้เป็นการทำธุรกรรมจากความผิดพลาดของผู้ใช้งานแอพพลิเคชั่นก็ตาม</li>
+            <li>บริษัทไม่มีส่วนร่วมเกี่ยวกับการกำหนดราคาค่าบัตรในทุกกรณี ผู้จัดจะเป็นผู้กำหนดราคาบัตร ส่วนลด หรือ โปรโมชั่นต่าง ๆ (หากมี)</li>
+            <li>บริษัทไม่มีส่วนร่วมในการกำหนดจำนวนอีเว้นท์หรือกิจกรรมที่จะจำหน่ายผ่านแอพพลิเคชั่นในทุกกรณี นอกจากนั้น ในบางกรณี ผู้จัดอาจจัดให้มีการจำหน่ายบัตรเข้าร่วมผ่านหลายช่องทางซึ่งรวมถึงแอพพลิเคชั่นนี้ ดังนั้น บริษัทจึงไม่สามารถยืนยันจำนวนสินค้าที่แน่นอนที่สามารถจำหน่ายผ่านแอพพลิเคชั่นได้ การระบุจำนวนบัตรผ่านทางแอพพลิเคชั่น เป็นการระบุจำนวนตามที่ผู้จัดกำหนดมาเท่านั้น</li>
           </ul>
         </li>
         <li>
@@ -78,7 +78,7 @@
         </li>
         <li>ค่าธรรมเนียมและค่าบริการ
           <ul>
-            <li>ผู้ใช้บริการยอมรับว่าการสั่งซื้อตั๋วเข้าร่วมในลักษณะใด ๆ ผ่านแอพพลิเคชั่น บริษัทมีสิทธิคิดค่าธรรมเนียมและค่าบริการในการดำเนินการตามจำนวนที่ระบุสำหรับกิจกรรมที่เกี่ยวข้อง ซึ่งค่าธรรมเนียมอาจเปลี่ยนแปลงได้ตามแต่ละงาน</li>
+            <li>ผู้ใช้บริการยอมรับว่าการสั่งซื้อบัตรเข้าร่วมในลักษณะใด ๆ ผ่านแอพพลิเคชั่น บริษัทมีสิทธิคิดค่าธรรมเนียมและค่าบริการในการดำเนินการตามจำนวนที่ระบุสำหรับกิจกรรมที่เกี่ยวข้อง ซึ่งค่าธรรมเนียมอาจเปลี่ยนแปลงได้ตามแต่ละงาน</li>
             <li>ค่าธรรมเนียมการดำเนินการจะไม่มีการคืนในทุกกรณี</li>
           </ul>
         </li>
@@ -88,7 +88,7 @@
             <li>หากมีการยกเลิกหรือเลื่อนกิจกรรม โปรดติดตามข้อมูลข่าวสารจากผู้จัดโดยตรง โดยที่บริษัทอาจจัดให้มีข้อมูลข่าวสารเกี่ยวกับยกเลิกหรือเลื่อนกิจกรรมผ่านหน้าแอพพลิเคชั่น และผ่านทางอีเมล แล้วแต่กรณี</li>
           </ul>
         </li>
-        <li>การคืนเงินค่าราคาตั๋ว
+        <li>การคืนเงินค่าราคาบัตร
           <ul>
             <li>กรณีที่กิจกรรมถูกยกเลิกหรือเลื่อนเวลา และท่านมีสิทธิได้รับการคืนเงินค่าสินค้า ท่านตกลงเรียกให้ผู้จัดชำระเงินคืนได้โดยตรงเท่านั้น เว้นแต่กรณีที่บริษัทกำหนดเป็นกรณีเฉพาะว่าท่านสามารถได้รับเงินคืนผ่านแอพพลิเคชั่นสำหรับกิจกรรมนั้นเท่านั้น</li>
             <li>บริษัทจะไม่รับผิดชอบต่อความเสียหายใด ๆ ซึ่งเกิดขึ้นจากการเลื่อนหรือยกเลิกกิจกรรมโดยผู้จัดในทุกกรณี</li>
@@ -101,7 +101,7 @@
         </li>
       </ul>
 
-      <h2>ข้อกำหนดเกี่ยวกับการขายตั๋วเข้าร่วม</h2>
+      <h2>ข้อกำหนดเกี่ยวกับการขายบัตรเข้าร่วม</h2>
       <ul>
         <li>ข้อมูลอีเว้นท์และกิจกรรมที่แสดงอยู่บน Daydash  ถือว่าเป็นเนื้อหาที่ถูกสร้างขึ้นโดยผู้ใช้</li>
         <li>อีเว้นท์และกิจกรรมที่ผู้จัดประกาศสามารถถูกลบทิ้งโดย Daydash ได้ หากอีเว้นท์หรือกิจกรรมดังกล่าวไม่ได้ปฏิบัติตามข้อตกลง เช่น
