--- a/app/views/layouts_mailer/user/order.html.erb
+++ b/app/views/layouts_mailer/user/order.html.erb
@@ -68,7 +68,7 @@
                         พร้อมรหัสการโอนเงิน <strong style="color: #21A4A5; "><%= @order.code %></strong> ผ่านทาง: Line <a href="https://line.me/ti/p/@daydash" target="_blank">@daydash</a> (มี @ ข้างหน้า)
                       </p>
                       <p style="font-weight: 200; padding-bottom: 30px;">
-                        3. เราจะส่งตั๋วให้คุณทางอีเมลเมื่อเราได้รับแจ้งยืนยันการชำระเงินแล้วภายใน 60 นาที :)
+                        3. เราจะส่งบัตรให้คุณทางอีเมลเมื่อเราได้รับแจ้งยืนยันการชำระเงินแล้วภายใน 60 นาที :)
                       </p>
                       <table width="100%">
                         <tr>
