--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -208,7 +208,7 @@
               <div class="cert-list" style="margin-top: 25px;">
                 <!-- <img src="/src/images/theme/comodo.png" height="30" /> -->
                 <img src="/src/images/theme/visa_master.png" height="30"/>
-                <img src="/src/images/theme/mixpanel.png" height="30"/>
+                <!-- <img src="/src/images/theme/mixpanel.png" height="30"/> -->
               </div>
             </div>
           </div>
