--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -44,7 +44,7 @@
                 </div>
                 <div class="row list-footer">
                   <div class="col-xs-12">
-                    Total: <%= @is_free ? "Free" : convert_to_currency(@tickets["total"].to_i / 100) %>
+                    Total: <%= @is_free ? "ฟรี" : convert_to_currency(@tickets["total"].to_i / 100) %>
                   </div>
                 </div>
               </div>
