--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -507,8 +507,8 @@
                                                                <tr>
                                                                   <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
                                                                      <p style="text-align: left;">© 2016 Daydash.co</p>
-                                                                     <p style="text-align: left;">Our mailing address is: 1120/337 Sukhumvit road, Klongtoey, Bangkok 10110 Thailand</p>
-                                                                  </td>
+                                                                     <!-- <p style="text-align: left;">Our mailing address is: 1120/337 Sukhumvit road, Klongtoey, Bangkok 10110 Thailand</p>
+ -->                                                                  </td>
                                                                </tr>
                                                             </tbody>
                                                          </table>
