--- a/app/assets/stylesheets/pages/organizer.sass
+++ b/app/assets/stylesheets/pages/organizer.sass
@@ -71,6 +71,12 @@ $green-color: #19D4D6
 
   #order-list-section
     padding-top: 30px
+    .order-status
+      text-transform: uppercase
+    .paid
+      color: green
+    .pending, .unpaid
+      color: red
 
     .section-header
       margin-bottom: 30px
@@ -79,7 +85,6 @@ $green-color: #19D4D6
 
       .section-header
         margin-bottom: 15px
-
 
 #organizer-event-checkin
 
