--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -45,3 +45,24 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript">
+
+  $(document).ready(function(){
+
+    var initSlick;
+
+    initSlick = function() {
+      return $('#cover-slick').not('.slick-initialized').slick({
+        infinite: true,
+        dots: false,
+        arrows: false,
+        fade: true,
+        autoplay: true,
+        autoplaySpeed: 4000
+      });
+    };
+
+    initSlick();
+  });
+</script>
