--- a/app/views/layouts/parts/_tracking.html.erb
+++ b/app/views/layouts/parts/_tracking.html.erb
@@ -28,14 +28,14 @@
    //  ga('send', 'pageview');
   </script>
 
-  <!-- Google Tag Manager -->
+  <!-- Google Tag Manager --><!--
   <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-NKJKFW"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-NKJKFW');</script>
+  })(window,document,'script','dataLayer','GTM-NKJKFW');</script> -->
   <!-- End Google Tag Manager -->
 
   <!-- start Mixpanel -->
@@ -56,6 +56,6 @@ mixpanel.init("a289e1db68d3fa5373095ae76c8e594a");</script>
           a.appendChild(r);
       })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
   </script>
-
-  <script src="//load.sumome.com/" data-sumo-site-id="618f283379b1939e2649e6959b35b6621e99cc2a4418a0022bc907ae0fed84bb" async="async"></script>
+<!--
+  <script src="//load.sumome.com/" data-sumo-site-id="618f283379b1939e2649e6959b35b6621e99cc2a4418a0022bc907ae0fed84bb" async="async"></script> -->
 <% end %>
