--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -6,14 +6,14 @@
     <title>Daydash - <%= @event.try(:title) || @seo_title %></title>
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
-    <meta name="description" content="<%= truncate(@event.try(:description), :length => 300) || @seo_description %>" />
+    <meta name="description" content="<%= truncate(@event.try(:short_description), :length => 300) || @seo_description %>" />
 
     <meta property="fb:app_id" content="<%= App.configure.facebook_app_id %>" />
     <meta property="og:title" content="Daydash - <%= @event.try(:title) || @seo_title %>"/>
     <meta property="og:url" content="<%= request.original_url %>">
     <meta property="og:site_name" content="daydash.co"/>
     <meta property="og:type" content="event"/>
-    <meta property="og:description" content="<%= truncate(@event.try(:description), :length => 300) || @seo_description %>"/>
+    <meta property="og:description" content="<%= truncate(@event.try(:short_description), :length => 300) || @seo_description %>"/>
     <meta property="og:image" content="<%= @event.try(:event_pictures).try(:first).try(:media, :thumb) || @seo_image %>" />
     <meta property="og:image:url" content="<%= @event.try(:event_pictures).try(:first).try(:media, :thumb) || @seo_image %>">
     <meta property="og:image:width" content="1200">
